# Data-Encryption-Standard

./: .gitignore  CMakeLists.txt  DataEncryptionStandard.sln  DataEncryptionStandard.vcxproj  Project1_DES2.sln  Project1_DES2.vcxproj  main.cpp
classes/Cryption/: Cryption.cpp  Cryption.h  DataEncryptionStandard.cpp  DataEncryptionStandard.h
program/: CMakeLists.txt
program/cli/: CMakeLists.txt
program/cli/src/: main.cpp
program/gui/: Binary_GUI.vcxproj  CMakeLists.txt  MyForm.cpp  MyForm.h  myGUI.cpp  myGUI.h  myGUI.resx
program/gui/src/: GUIHandler.cpp  GUIHandler.h  GUIUtils.cpp  GUIUtils.h  main.cpp
program/src/: main.cpp
